# fastapi-sa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/fastapi_sa/: __init__.py  database.py  exceptions.py  middleware.py
tests/: conftest.py  test_app.py  test_database.py  test_middleware.py  test_repositories.py  test_tasks.py  test_version.py
tests/example/: app.py  db.py  repositories.py  tasks.py
