[tool.poetry]
name = "fastapi-sa"
version = "0.0.1.dev0"
description = "fastapi-sa provides a simple integration between FastAPI and SQLAlchemy in your application"
readme = "README.md"
authors = ["huagang <huagang517@126.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.43"}
starlette = ">=0.20.4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pylint-pytest = "^1.1.2"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.20.1"
fastapi = "^0.86.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pylint.MASTER]
load-plugins = ['pylint_pytest']