[tool.poetry]
name = "fastapi-sa"
version = "0.0.1.dev1"
description = "fastapi-sa provides a simple integration between FastAPI and SQLAlchemy in your application"
readme = "README.md"
authors = ["huagang <huagang517@126.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = { extras = ["asyncio"], version = "^1.4.43" }
starlette = ">=0.19.1"

[tool.poetry.group.dev.dependencies]
pylint-pytest = "^1.1.2"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.20.1"
fastapi = "^0.82.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylint.MASTER]
load-plugins = ['pylint_pytest']

good-names = [
    "pk",
]