[tool.poetry]
name = "fastapi-sa"
version = "0.1.0"
description = "fastapi-sa provides a simple integration between FastAPI and SQLAlchemy in your application"
readme = "README.md"
authors = ["huagang <huagang517@126.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}

[tool.poetry.group.dev.dependencies]
pylint-pytest = "^1.1.4"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
tox = "^4.11.3"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylint.MASTER]
load-plugins = ['pylint_pytest']

good-names = [
    "pk",
]